* Added a %require_uber_ver() macro to the macro library file that lets a resource fail if the running version of UAT is lower than specified
* Updated Asar to 1.81
* Added support for shared routines similar to (but a little different from) Pixi and GPS
* Added support for the ">sa1" command, which has UAT automatically invoke the SA-1 CPU when calling labels on SA-1 ROMs

Library stuff:
* If a library file has a label with the same name as the file, UAT no longer exports that label without the filename prefix.  E.g., a library file math.asm with the label math: would previously have had that label exposed simply as "math:", rather than "math_math:" as suggested by the documentation.  This was undocumented behavior and no longer happens.
* Verbose info for library files no longer includes the PC address of the insertion location, just the SNES address

* Fixed issue #28 (crash when switching to a custom gamemode)
* Fixed issue #23 (macrolib file not available for global code)
* Fixed issue #29 (same filename in different folder type wouldn't work...foo.asm in level/ and overworld/ eg)
* Fixed issue #25 (UAT will now return 1 on error and 0 on success)
* Added a hijack of the 12 bytes of unused space at $01CD1E; this now consists of 4 bytes of "UBER", then one byte for the major version number of UAT that was used, and one byte for the minor version number (currently 2.0); the last 6 bytes are set to 0, but reserved for future use
* UAT will refuse to run on a ROM that had a later version of UAT applied (see readme for how to override this)
* Added a missing "nop" to the hijack at $00A5EE
* Rewrote the list.txt parser using Pidgin (https://github.com/benjamin-hodgson/Pidgin) to accommodate the new stuff
* Removed the path list passed to Asar when patching files.  Any incsrc/incbin should be relative to the calling file's location (absolute paths may also be given).  With this in mind, issue #20 should be closed