@@ -5,7 +5,6 @@
 // if a resource fails to load (invalid bytes command, and maybe file not found), add it, but mark it as failed, so that subsequent uses
 //   of it don't try to reload it and get the same error over and over...also don't want to say "expected 0 bytes" for a malformed
 //   bytes command
-// figure out what to do about !1938 (!sprite_load_table)
 
 global using System;
 global using System.Collections.Generic;
